*Empty MediaWiki Message*

--- a/Jigjiga.mw
+++ b/Jigjiga.mw
@@ -36,12 +36,12 @@
 |subdivision_type       = Deegaanka
 |subdivision_type1      = [[Dalka]]
 |subdivision_name1      = {{flag|Itoobiya}}
-|subdivision_type2      = [[Nooca Maamul]]
-|subdivision_name2      = [[Dawlad Deegaan]]
+|subdivision_type2      = Deegaanka
+|subdivision_name2      = [[DDS]]
 |subdivision_type3      = 
-|subdivision_name3      = 
+|subdivision_name3      =Degmada 
 |subdivision_type4      = 
-|subdivision_name4      = 
+|subdivision_name4      =[[Jig-jiga]] 
 |government_footnotes   =
 |government_type        =
 |leader_title           = 
