*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -7,7 +7,7 @@
 |motto                  =
 |image_skyline          = 
 |imagesize              = 
-|image_caption          = 
+|image_caption          =https://www.google.com/search?q=abaaley&tbm=isch&ved=2ahUKEwjg5dm-vt_qAhUIzBQKHcWNAZkQ2-cCegQIABAC&oq=abaale&gs_lcp=ChJtb2JpbGUtZ3dzLXdpei1pbWcQARgBMgQIIxAnMgIIADIGCAAQChAYMgYIABAKEBgyBAgAEBg6BAgAEA1Q-b8DWOjCA2Dk0QNoAHAAeACAAfsDiAGlBpIBBzItMS41LTGYAQCgAQHAAQE&sclient=mobile-gws-wiz-img&ei=2ngXX-CQKIiYU8WbhsgJ&bih=622&biw=414&prmd=mvin#imgrc=7RbK1C_Zv2C2eM 
 |image_flag             = 
 |flag_size              =
 |image_seal             = 
