*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -5,20 +5,20 @@
 |nickname               = 
 |settlement_type        =Tuulo
 |motto                  =
-|image_skyline          = 
+|image_skyline          =Khariirada Abaaley 
 |imagesize              = 
-|image_caption          =https://www.google.com/search?q=abaaley&tbm=isch&ved=2ahUKEwjg5dm-vt_qAhUIzBQKHcWNAZkQ2-cCegQIABAC&oq=abaale&gs_lcp=ChJtb2JpbGUtZ3dzLXdpei1pbWcQARgBMgQIIxAnMgIIADIGCAAQChAYMgYIABAKEBgyBAgAEBg6BAgAEA1Q-b8DWOjCA2Dk0QNoAHAAeACAAfsDiAGlBpIBBzItMS41LTGYAQCgAQHAAQE&sclient=mobile-gws-wiz-img&ei=2ngXX-CQKIiYU8WbhsgJ&bih=622&biw=414&prmd=mvin#imgrc=7RbK1C_Zv2C2eM 
+|image_caption          = 
 |image_flag             = 
 |flag_size              =
 |image_seal             = 
 |seal_size              =
 |image_map              = 
 |mapsize                = 
-|map_caption            = 
-|pushpin_map            ={{coord|05|05|N|45|09|E|region:ET|display=inline,title}}
+|map_caption            =https://www.google.com/search?q=abaaley&tbm=isch&ved=2ahUKEwjg5dm-vt_qAhUIzBQKHcWNAZkQ2-cCegQIABAC&oq=abaale&gs_lcp=ChJtb2JpbGUtZ3dzLXdpei1pbWcQARgBMgQIIxAnMgIIADIGCAAQChAYMgYIABAKEBgyBAgAEBg6BAgAEA1Q-b8DWOjCA2Dk0QNoAHAAeACAAfsDiAGlBpIBBzItMS41LTGYAQCgAQHAAQE&sclient=mobile-gws-wiz-img&ei=2ngXX-CQKIiYU8WbhsgJ&bih=622&biw=414&prmd=mvin#imgrc=7RbK1C_Zv2C2eM 
+|pushpin_map            =https://www.google.com/search?q=abaaley&tbm=isch&ved=2ahUKEwjg5dm-vt_qAhUIzBQKHcWNAZkQ2-cCegQIABAC&oq=abaale&gs_lcp=ChJtb2JpbGUtZ3dzLXdpei1pbWcQARgBMgQIIxAnMgIIADIGCAAQChAYMgYIABAKEBgyBAgAEBg6BAgAEA1Q-b8DWOjCA2Dk0QNoAHAAeACAAfsDiAGlBpIBBzItMS41LTGYAQCgAQHAAQE&sclient=mobile-gws-wiz-img&ei=2ngXX-CQKIiYU8WbhsgJ&bih=622&biw=414&prmd=mvin#imgrc=7RbK1C_Zv2C2eM
 |pushpin_label_position =Top
 |pushpin_mapsize        =9
-|pushpin_map_caption    =https://www.google.com/maps?sxsrf=ALeKk00nkTvbwMU-6KUwYcF6t_RnTYasGw:1595371907320&q=abaaleey&gs_lcp=ChFtb2JpbGUtZ3dzLXdpei1ocBABGAAyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECcyBwgjEOoCECdQAFgAYJkoaAFwAHgAgAEAiAEAkgEAmAEAsAEP&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiI363Bt9_qAhXoVBUIHaTxCxIQ_AUoAXoECAwQAQ
+|pushpin_map_caption    =https://www.google.com/search?q=abaaley&tbm=isch&ved=2ahUKEwjg5dm-vt_qAhUIzBQKHcWNAZkQ2-cCegQIABAC&oq=abaale&gs_lcp=ChJtb2JpbGUtZ3dzLXdpei1pbWcQARgBMgQIIxAnMgIIADIGCAAQChAYMgYIABAKEBgyBAgAEBg6BAgAEA1Q-b8DWOjCA2Dk0QNoAHAAeACAAfsDiAGlBpIBBzItMS41LTGYAQCgAQHAAQE&sclient=mobile-gws-wiz-img&ei=2ngXX-CQKIiYU8WbhsgJ&bih=622&biw=414&prmd=mvin#imgrc=7RbK1C_Zv2C2eM
 |coordinates_display    ={{coord|05|05|N|45|09|E|region:ET|display=inline,title}}
 |subdivision_type       =Dalka
 |subdivision_name       ={{flag|Itoobiya}}
@@ -26,7 +26,7 @@
 |subdivision_name1      =[[Shabeele]]
 |subdivision_type2      =Feer-feer
 |subdivision_name2      =
-|government_footnotes   =Dawladda Deegaanka Soomaalida
+|government_footnotes   =
 |government_type        =[[Federal]]
 |leader_title           =
 |leader_name            = 
