*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -5,9 +5,9 @@
 |nickname               = 
 |settlement_type        =Tuulo
 |motto                  =
-|image_skyline          =Abaaley.jpg 
+|image_skyline          =Muuqaalka_Abaaley.jpg 
 |imagesize              = 
-|image_caption          =Khariirada Abaaley 
+|image_caption          =Muuqaalka Sare ee Abaaley. 
 |image_flag             = 
 |flag_size              =
 |image_seal             = 
