*Empty MediaWiki Message*

--- a/Boland.mw
+++ b/Boland.mw
@@ -3,8 +3,8 @@
 | conventional_long_name = Republic of Poland
 | common_name = Poland
 | native_name = {{native name|pl|Rzeczpospolita Polska}}
-| image_flag = Flag of Poland.svg
-| flag_border = Flag of Poland (normative).svg
+| image_flag = Calanka of Poland.svg
+| flag_border = Calanka Boland (normative).svg
 | image_coat = Herb Polski.svg
 | national_anthem = "[[Dąbrowski's Mazurka|Mazurek Dąbrowskiego]]"<br />({{Lang-en|"Poland Is Not Yet Lost"}})<br />[[File:Mazurek Dabrowskiego.ogg|center]]
 | image_map = {{Switcher|[[File:EU-Poland (orthographic projection).svg|frameless]]|Show globe|[[File:EU-Poland.svg|upright=1.15|frameless]]|Show map of Europe|default=1}}
@@ -107,6 +107,7 @@ Boland]]
 Dalka jamhuuriyada Boland. Dalka Poland waxa uu kamid yahay wadamada qaarada yurub gaar ahaan kuwa dhaca badhtamaha. Dalalka la jaarka ah dalka Poland waxa kamid ah jarmalka ([[Jarmal]], [[Ukrain]], [[Belarus]], [[Islofaakiya]],[[Jamhuuriyadda Tashik]]
 U bood: gooshitaan, raadi , [[Ruushka]] (Russia) iyo [[Lithuaniya]]. Dhinca waqooyi galbeedna waxa kaga talaa bada Baltic-ga (Baltic Sea). Caasimada dalka Boland waxa layidhaa Warsaw.
 [[File:FB Warszawa panorama.jpg|thumb|left|Warsaw]]
+
 == Bedka ==
 Bedka uu ku fadhiyo dalka jamhuuriyada Boland waxa lagu qiyaasaa 120,728.35, (mayl laba jibaaran) una dhiganta 312,679.00, oo (kiiloo mitir laba jibaaran). Qiyaas ahaan baaxada dalka Boland waxa ay ku dhowdahay bedka uu ku fadhiyo gobolka ( New Mexico) ee dalka Maraykanka.
 == Dadka ==
