*Empty MediaWiki Message*

--- a/Boland.mw
+++ b/Boland.mw
@@ -3,8 +3,8 @@
 | conventional_long_name = Republic of Poland
 | common_name = Poland
 | native_name = {{native name|pl|Rzeczpospolita Polska}}
-| image_flag = Calanka of Poland.svg
-| flag_border = Calanka Boland (normative).svg
+| image_flag = Flag of Poland.svg
+| flag_border = Flag of Poland (normative).svg
 | image_coat = Herb Polski.svg
 | national_anthem = "[[Dąbrowski's Mazurka|Mazurek Dąbrowskiego]]"<br />({{Lang-en|"Poland Is Not Yet Lost"}})<br />[[File:Mazurek Dabrowskiego.ogg|center]]
 | image_map = {{Switcher|[[File:EU-Poland (orthographic projection).svg|frameless]]|Show globe|[[File:EU-Poland.svg|upright=1.15|frameless]]|Show map of Europe|default=1}}
