*Empty MediaWiki Message*

--- a/Boland.mw
+++ b/Boland.mw
@@ -103,7 +103,7 @@
 [[File:Flag of Poland.svg|thumb|
 [[File:EU-Poland.svg|thumb|Boland]]
 Boland]]
-'''Boland''' ({{af+pl|Polska}}) ama '''Jamhuuriyadda Boland''' ({{af-pl|Rzeczpospolita Polska}}) waa wadan ku yaalo bartamaha [[Yurub]].
+'''Boland''' ama '''Bolska''' ({{af+pl|Polska}}) ama '''Jamhuuriyadda Bolska''' ({{af-pl|Rzeczpospolita Polska}}) waa wadan ku yaalo bartamaha [[Yurub]].
 Dalka jamhuuriyada Boland. Dalka Poland waxa uu kamid yahay wadamada qaarada yurub gaar ahaan kuwa dhaca badhtamaha. Dalalka la jaarka ah dalka Poland waxa kamid ah jarmalka ([[Jarmal]], [[Ukrain]], [[Belarus]], [[Islofaakiya]],[[Jamhuuriyadda Tashik]]
 U bood: gooshitaan, raadi , [[Ruushka]] (Russia) iyo [[Lithuaniya]]. Dhinca waqooyi galbeedna waxa kaga talaa bada Baltic-ga (Baltic Sea). Caasimada dalka Boland waxa layidhaa Warsaw.
 [[File:FB Warszawa panorama.jpg|thumb|left|Warsaw]]
@@ -137,3 +137,4 @@ dadka polish-ka ee u dhashay Jamhuuriyada wxa ay dhaqdaan khaansiirka iyo digaag
 {{Commonscat|Poland}}
 
 {{Dalalka Yurub}}
+<references />
