--- a/Laylkase.mw
+++ b/Laylkase.mw
@@ -12,7 +12,7 @@
 |rels= [[Islam]] <sup>(Sunni)</sup>
 |related-c=[[Reer Darawiish]], [[Mareexaan]], [[Warsangali]], [[Dishiishe]], [[Majeerteen]], [[Awrtable]], [[Ogaden (beel)|Ogaadeen]], kuwo kale oo [[Daarood]], [[Beelaha Soomaalida]]
 }}
-
+[[File:Reer Daraawiish - warsangeli - mumin aden leelkase.png|thumb|leelkase mumin aden]]
 '''Laylkase''' ({{lang-en|Lailkase}};<ref>{{cite web|title=Roots of Insecurity in Puntland|url=http://www.somaliareport.com/index.php/post/2454/Roots_of_Insecurity_in_Puntland}}</ref> ama '''Leelkase'''<ref>[[United Nations Security Council]], [http://www.fas.org/asmp/resources/govern/109th/S2006913.pdf Letter dated 21 November 2006 from the Chairman of the Security Council Committee...], p. 20</ref> ama '''Lelikase''''<ref>{{cite web|title=Warsaxaafadeed: Beesha Laylkase oo Saxaafada kula Hadashay Garoowe Dhaliishayna Saamiga Lagasiiyay Golaha Wasiirada (Sawirro)|url=http://www.raxanreeb.com/2014/01/beesha-laylkase-oo-dhaliishay-saamiga-lagasiiyay-golaha-wasiirada-puntland/}}</ref>}}; {{lang-ar|ليلكسة}}) (''Xuseen bin Cabdiraxman bin Ismaaciil bin Ibrahim al Jaberti'') waa [[beelaha Soomaalida|qabiil]] ka tirsan [[Daarood|Beesha Daarood]] ee [[Dadka Soomaalida]].<ref>[[World Bank]], ''[http://siteresources.worldbank.org/INTSOMALIA/Resources/conflictinsomalia.pdf Conflict in Somalia: Drivers and Dynamics ]'', pp. 56-57</ref>
 
 ==Hordhac==
