--- a/Mareexaan.mw
+++ b/Mareexaan.mw
@@ -20,6 +20,7 @@ Intiisa badan Mareexaan wuxuu ku dhaqan yahay gobolka [[Jubbada Hoose]], [[Gedo]
 == Taariikh ==
 
 === Suldanadii Mareexaan ===
+[[File:Reer Daraawiish - warsangeli - wagardac - marehan.png|thumb|wagardhac marehan]]
 Qarnigii 17aad ilaa 18aad, Saldanada Mareexaan waxay ku baahsanayd bartamaha Webiga Jubba laga soo bilaabo Baardheere, Luuq ilaa gobollada dhexe. Mareexaan Ugaasyadooda waxay ka talin jireen inta xeebta gacanka Cadmeed ilaa dhulka Sool kuna soo rogan koonfur ilaa Baladwayne. <ref>{{cite web |url=https://www.refworld.org/docid/3ae6ab9520.html |title= Request for a genealogical table for the Mareehan clan |author=[[Research Directorate, Immigration and Refugee Board, Canada]] |year=1 December 1991|publisher=[[Perry–Canada: Immigration and Refugee Board of Canada]]</ref>
 
 Berigii hayaanka koonfureed uu bilowday bartamihii qarnigii 18aad, wuxuu Mareexaan gaaray ilaa Webiga Tana ee dhaca gobolka Waqooyi Bari ee dhulka Soomaalida Kiinya. Gumeystayaashii Yurub waxay qariiradahooda ku muujisteen dhulka Jubbaland ilaa soohdlinta Shabeele in Mareexaan deganaa.<ref>Encyclopedia of Religion and Ethics, Part 12 by James Hastings, ISBN 0-7661-3687-6</ref> 
