*Empty MediaWiki Message*

--- a/Warsangali.mw
+++ b/Warsangali.mw
@@ -1,6 +1,6 @@
 {{Infobox ethnic group|
 |group=Warsangali<br>ورسنجلي
-|image=
+|image=Reer Daraawiish - warsangeli.png
 |region1 = {{flagcountry|Somalia}}
 |region2 = {{flagcountry|Ethiopia}}
 |region3 = {{flagcountry|Kenya}}
