--- a/Warsangali.mw
+++ b/Warsangali.mw
@@ -1,6 +1,6 @@
 {{Infobox ethnic group|
 |group=Warsangali<br>ورسنجلي
-|image=Reer Daraawiish - warsangeli.png
+|image=
 |region1 = {{flagcountry|Somalia}}
 |region2 = {{flagcountry|Ethiopia}}
 |region3 = {{flagcountry|Kenya}}
@@ -11,7 +11,7 @@
 |rels= [[Islam]] <sup>([[Sunni Islam|Sunni]])</sup>
 |related-c=[[Meheri]], [[Ogaadeen]], [[Awrtable]], [[Mareexaan]], iyo beelaha kale [[Harti]], [[Majeerteen]], [[Dishiishe]], [[Reer Darawiish]]. <!-- CONFIRMED RELATIONS!!! -->
 }}
-
+[[File:Reer Daraawiish - warsangeli.png|thumb|.]]
 '''Warsangali''' ({{lang-en|''Warsangeli clan''}}; {{lang-ar| قبيلة أوسنجلي}}), (sidoo kale loo yaqaano '''Moorasaante/Awrkii Cirka''', '''Warsengeli''', '''Warsingeli''', '''Oor Singally''') waa [[Beelaha Soomaalida|qabiil]] kamid ah beelaha HARTI. ee beelwaynta [[Daarood]]ka, ee [[Soomaali|Dadka Soomaalida]]. Warsengalidu waxay deegaan ku yihiin wadanka [[waqooyiga somalia]] iyo [[koonfurta Soomaaliya]] (gaar ahaan gobolada [[Maakhir]] ilaa gobolka [[Sanaag]]),deegaano ka mid ah [[shabeelaha dhexe,shabeelaha hoose,baay,bakool,gedo,jubada dhexe iyo jubada hoose]], deegaano ka mid ah [[howd]]ka; iyo [[Itoobiya]] (meelo ka mid ah deegaanka [[Ogaden]]).<ref>"Collective Punishment", p. 14</ref> Warsengaligu wuxuu ka mid yahay beelaha [[Harti]] ee hoostaga [[Daarood]]ka.<ref>Cruttenden, C. J. "[https://books.google.com/books?id=130MAAAAIAAJ&lpg=PA49&ots=F--3PH55Q7&dq=%22%22Memoir%20on%20the%20Western%20or%20Edoor%20Tribes%20with%20Southern%20Branches%20of%20the%20Family%20of%20Darrood%22%20cruttenden&pg=PA73#v=onepage&q=&f=false Memoir on the Western or Edoor Tribes, inhabiting the Somali Coast...]". London: Royal Geographical Society. Vol. 19 (1849), pp. 72-73</ref>
 
 ==Hordhac==
