/* The Universal Code of Conduct (UCoC): we want to hear from you. */ new section

--- a/Wikipedia:Safaarad.mw
+++ b/Wikipedia:Safaarad.mw
@@ -1269,3 +1269,26 @@ Katherine Maher (Executive Director, Wikimedia Foundation)
 <references/>
 </div> <small>Sent by [[:m:User:Elitre (WMF)]] 20:10, 9 Luuliyo 2020 (UTC) - '''[[:m:Special:MyLanguage/Abstract Wikipedia/July 2020 announcement]]''' </small>
 <!-- Message sent by User:Elitre (WMF)@metawiki using the list at https://meta.wikimedia.org/w/index.php?title=User:Elitre_(WMF)/All_wikis_June_2020&oldid=20265921 -->
+
+== The Universal Code of Conduct (UCoC): we want to hear from you. ==
+
+<div class="plainlinks mw-content-ltr" lang="en" dir="ltr">
+
+''{{int:Hello}}. Apologies that you may not be reading this message in your native language: translations of the following message may be available on [[:m:Special:MyLanguage/Universal Code of Conduct/Message to small and medium sized wikis|Meta]]. {{int:please-translate}}. {{Int:Feedback-thanks-title}}''<br>
+
+At times, our contributor communities and projects have suffered from a lack of guidelines that can help us create an environment where free knowledge can be shared safely without fear. 
+There has been talk about the need for a global set of conduct rules in different communities over time. 
+
+Recently, the Wikimedia Foundation Board of Trustees announced a [[:m:Special:MyLanguage/Wikimedia_Foundation_Board_noticeboard/May_2020_-_Board_of_Trustees_on_Healthy_Community_Culture,_Inclusivity,_and_Safe_Spaces|Community Culture Statement]], asking for new standards to address harassment and promote inclusivity across projects.
+
+The universal code of conduct will be a binding minimum set of standards across all Wikimedia projects, and will apply to all of us, staff and volunteers alike, all around the globe. It is of great importance that we all participate in expressing our opinions and thoughts about UCoC and its values. We should think about what we want it to cover or include and what it shouldn’t include, and how it may create difficulties or help our groups. 
+
+This is the time to talk about it. Before starting drafting the code of conduct, we would like to hear from you and to solicit the opinions and feedback of your colleagues. 
+In order for your voice to be heard, we encourage and invite you to read more about [[:m:Special:MyLanguage/Universal_Code_of_Conduct|the universal code of conduct (UCoC)]] and then write down your opinions or feedback [[:m:Talk:Universal_Code_of_Conduct|on the discussion page]].  
+
+To reduce language barriers during the process, you are welcome to translate [https://meta.wikimedia.org/w/index.php?title=Special:Translate&group=page-Universal+Code+of+Conduct&language=en&action=page&filter= the universal code of conduct main page] from English into your respective local language. You and your community may choose to provide your opinions/feedback using your local languages. 
+
+Thanks in advance for your attention and contributions, [[:m:Talk:Trust_and_Safety|The Trust and Safety team at Wikimedia Foundation]] 16:42, 22 Luuliyo 2020 (UTC)
+
+</div>
+<!-- Message sent by User:Elitre (WMF)@metawiki using the list at https://meta.wikimedia.org/w/index.php?title=Universal_Code_of_Conduct/Message_to_small_and_medium_sized_wikis/List&oldid=20303398 -->
