--- a/Maktabad.mw
+++ b/Maktabad.mw
@@ -1,4 +1,4 @@
-[[File:Bibliotèque nationale de France, site Richelieu (salle ovale).JPG|500px|thumb|Maktabad]]
+[[File:Bibliothèque nationale de France, site Richelieu (salle ovale).jpg|500px|thumb|Maktabad]]
 
 '''Maktabad''' waa meel [[Buug]] laga soo gato ama laga deensado.
 Maktabada sideedaba waa meel degen, oo dadka aamusan, oo wax lagu akhrista. Maktabada waxaa laga soo gattaa ama laga deensadaa, Buugaagta taariikhiga ah ama kuwa sheekada ah, waxaana laga soo deensa karaa, filmaha CD'yasha, kuwii hore, ama heesaha. maktabada waxaa kale oo lagu isticmaali karaa, Kombuyuutarada, oo lagu cayaari karo ama internetka lagu gali karo.
