--- a/Dharkeenley.mw
+++ b/Dharkeenley.mw
@@ -1,43 +1,33 @@
-Degmada Dharkeenleey waxay ka mid tahay degmooyinka magaalada Muqdisho waxay xigtaa dhanka koofur galbeed. Waxaa waayadii danbe ku noolaa dad fara badan oo qaarkii ka soo qaxay Magaalada inteeda kale. Degmadu waxay ka kooban tahay xaafado badan 
-waxaan ku yaal sidax iskuul dugsiga hoose dhaxe dhame yaasiin cartan , dugsiga hoose dhaxe cali xuseen iyo baarbe.
-waxaakale ee ku taal degman kaalin shidaal (patrol station) masaajid badan sida misaajidka uunlaayo waxaa kale oo ku yaal suuqboocle iyo suuq yaree iyo shineemo muqdisho, salidhig boolis (saldiggalbeed) tabakaayo madoow iwm.
-gaaraashyo badan sida garaashka maclin nuur , garaashka xaajigaboow, tornada cisoow oo biyo dageenka agtiisa ah.
-jaamac, exkontrool,safaarada mareekanka , warshada daawada, warshada hargaha iwm 
-marka hore dharkeenlay io wadajid waxay isla ahaayen haldegmo markii dambe ayaa labo degmo laga dhigo.
-waxaa kaloo kajira koox ku badacagta oo lagu maga caabo '''R.R.P.B.O''' waxee aheed koox aad caan ugu ah waxaa tabare u ahaan jiray Dr: isaaq nuur alah u raxmado , hanadeneh waxaa haya Abshir Hayle Ulusow dhinaca xiri rinta ciyaalka xafada , Abdi raxiin gaafow.  
+Degmada Dharkeenleey waxay ka mid tahay degmooyinka magaalada Muqdisho, waxayna xigtaa dhanka koofur galbeed. Waxaa waayadii danbe ku noolaa dad fara badan oo qaarkii ka soo qaxay Magaalada inteeda kale. Degmadu waxay ka kooban tahay xaafado badan.
+waxaana ku yaal saddex iskuul oo dawladeed oo kala ah dugsiga hoose dhaxe & sare ee Dhame yaasiin cartan, dugsiga hoose dhaxe & sare ee Cali Xuseen iyo dugsiga hoose dhaxe & sare ee Baarbe.
 
-waaxaha iyo Dadka ku nool Dagmada Dharkenleey kuma cada halkaan. 
+Masaajido badan ayaa ku yaala degmada sida misaajidka dabaqeyn, uunlaayo, masjidka Saldhiga.
+
+sidoo kale Suuqyada caanka ah ee ku yaala Dharkeenley waxaa ka mid ah suuq boocle, Suuq yare iyo Suuqa weyn.
 
 
+> Meelaha caanka ee dharkeenley
+
+ 
+• Saladhiga Galbeed 
+• Tabakaayo madoow
+• Shaneemo Muqdisho
+• Garaashka macallin nuur
+• Garaashka xaajigaboow,
+• Tornada cisoow (biyo dageenka)
+• Xoosh
+• Exkontrool 
 
 
+> Goobaha Caalamiga ee ku yaala Dharkeenley 
 
+• Jaamacadda Ummadda Soomaaliyeed (Gaheyr)
+• Safaarada Mareekanka
+• Warshada daawada 
+• Warshada hargaha 
 
+Dharkeenlay iyo wadajir markii hore waxay isla ahaayen hal degmo mar dambe ayaa labo degmo laga kala dhigay.
 
+[[Ciyaaraa]]
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-lu
+Degmada Dharkeenley waxay ku fiicanyihiin ciyaaraha isboortiska gaar ahaan kubada Cagta waxaana ay ahaayeen guuleystayaashii ugu danbeeyay ee ku guuleystay Koobka degmooyinka gobolka banaadir ayagoona ka qaaday degmada Waaberi.
