--- a/Dharkeenleey.mw
+++ b/Dharkeenleey.mw
@@ -46,44 +46,96 @@
 
 
 
-Degmada Dharkeenleey waxay ka mid tahay degmooyinka magaalada Muqdisho waxay xigtaa dhanka koofur galbeed.
-Waxaa waayadii dagaalada iyo qaxa xamar ka socdeen ee itoobiyaanka joogeen  ku noolaa oo Ku soo qaxay soon a dagay degmada dad fara badan oo  ka soo qaxay Magaalada inteeda kale.
-Degmadu waxay ka kooban tahay xaafado badan oo  
+Degmada Dharkeenleey waxay ka mid tahay degmooyinka magaalada Muqdisho waxay xigtaa dhanka koonfur galbeed.
 
-ay ka mid yihiin xaafadaha Ceel dheere,Showriyaha, Dabaqeen, Aabagedo, Kuweyt, Suuq boocle,Quraca waanjeesha, Suuq liif, Xoosh, Buula qaran, Macmacaanka, iyo kuwo kale oo aan yareyn.
-Degmada Waxay soo martay marxalado kala duwan waxaana lagu tilmaamaa meelaha istaraatiijiga Xamar ka mid ah.
-Waxaa ku yiilla suuqyo sida; (Suuq liif, Suuq boocle), Iskuulaadkeeda waxaa ka mid ah;(Al-Fariid, Abuubakar Al-sadiiq "Dabaqeyn", Iqra',Khaddiijo, Alanwaar, Assafa,somali pen ...). Ardaydeeda waxay ka mid yihiin arday ugu dadaalka badan Xamar, iskuuladuna sida kan Iqra' waxa uu galay laba mar oo isku xigta kaalinta 1aad ee Bankul Islaami.
-Waxaa noqday waxyaabaha lagu faano ayadoo degamada ay ka mid tahay degmooyinka ugu fiican dhanka wax barashada, dhaqaalaha, dhismooyinka iyo wax yaabo kale.
-Tan iyo burburkii waxay ka sii hormaraysay degmooyin kale oo ku yaalla Caasimadda.
-Madiina waa degmada la tilmaamo in ay ahayd meesha ay ka timid degmadan(madiina=dharkeenleey+wadajir), waxaan xuduudeeda lagu tilmaamaa in ay tahay wadada xaaji maxamed ee Suuq yare.
+Waxaa waqtiyadii dagaalada ay ka socdeen xamar ee itoobiyaanka ku soo qaxay degmada dad fara badan oo degnaa Magaalada inteeda kale.
+
+Dharkeenlay iyo wadajir markii hore waxay isla ahaayen hal degmo mar dambe ayaa labo degmo laga kala dhigay. halka xuduudeeda u ah labada degmo ayaa lagu tilmaamaa in ay tahay wadada xaaji maxamed ee Suuq yare.
+
+Degmada Waxay soo martay marxalado kala duwan waxaana lagu tilmaamaa meelaha istaraatiijiga ee ka yaala Xamar.
+
 Waagii burburka waxaa maaamuli jiray hogaamiyo kooxeedyo kala duwan sida: Muuse Suudi, Xuseen Caydiid waxaana ka dhici jiray mar mar dagaalo aan sidaa u cusleyn.
-waayadii danbe waxaa xukunkeeda soo maray; Maxkamadaha Islaamiga, Jabhadda Islaamiga. Haddana waxay degmada hoos tagtaa maamulka Gobolka Banaadir ee Soomaalia
-waxa ka jira kooxo badan oo kubada cagta sida>
-kooxaha(
-IFTIN>
-AARGO>
-USSY>
-VIOLA>
-AL RAASHID>
-SUUQ YARE>
-AL IIMAAN>
-ZEENO>
-AL-AHLI DHARKEENLEY>
-JUGWAYN>
-AL-TUNSA>
-IFIS>
-FC GODEEY> 
-HARIIDKA>
+
+Xili danbe waxaa xukunkeeda soo maray; Maxkamadaha Islaamiga, Jabhadda Islaamiga. Haddana waxay degmada hoos tagtaa maamulka Gobolka Banaadir ee Soomaaliya.
+
+> Xaafadaha Dharkeenleey
+
+xaafada Ceel dheere,Showriyaha, Dabaqeen,Aabagedo, Kuweyt, Suuq boocle,Quraca waanjeesha, Suuq liif, Xoosh, Buula qaran, Macmacaanka, iyo kuwo kale.
+
+Masaajida ku yaala dharkenley 
+
+Masaajido badan ayaa ku yaala degmada sida misaajidka dabaqeyn, uunlaayo, masjidka Saldhiga Galbeed, Xaaji Maxamed, sh cabdixafiid, Rabi Sali al-nuur, Al- raxma Ceeldheere, Salaam, Macallin nuur,Khaliilu Raxman,
+
+> Suuqyada Caanka ee ku yaala dharkeenley
+
+Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
+
+
+> Meelaha caanka ee dharkeenley
+
+ 
+• Saladhiga Galbeed 
+
+• Tabakaayo madoow
+
+• Shaneemo Muqdisho
+
+• Garaashka macallin nuur
+
+• Garaashka xaajigaboow
+
+• Tornada cisoow (biyo dageenka)
+
+• Xoosh
+
+• Exkontrool 
+
+
+> Goobaha Caalamiga ee ku yaala Dharkeenley 
+
+• Jaamacadda Ummadda Soomaaliyeed (Gaheyr)
+
+• Safaarada Mareekanka
+
+• Warshada daawada
+ 
+• Warshada hargaha 
+
+
+> Iskuulada Dawlawda ee ku yaala Degmada 
+
+• Dhame yaasiin Cartan 
+
+• Cali Xuseen
+
+• Baarbe
+
+> Iskuulada gaarka ah eeku yaala degmada 
+
+Al-Fariid, Abuubakar Al-sadiiq, Iqra, Khaddiijo, Al-Anwaar, Assafa, Al-Risala, Halgan.
+
+> Tartan Aqooneedka degmada dharkeenley
+
+Degmada waxay ku guuleysatay tartan aqooneed kii ramadaanka ee 2013 oo ay ku tartamayeen in ka badan 28 degmo oo ka kala yimid gobalada dalka oo dhan. sidoo kalana tartankii ramadaan ee 2020 waxay gashay kaalinta labaad.
+
+
+> Ciyaaraha iyo Kooxaha ka jira dharkeenleey degmada waxaa ka jira kooxo badan oo kubada cagta sida kooxaha: 
+
+IFTIN
+AARGO
+USSY
+VIOLA
+AL RAASHID
+SUUQ YARE
+AL IIMAAN
+ZEENO
+AL-AHLI DHARKEENLEY
+JUGWAYN
+AL-TUNSA
+IFIS
+FC GODEEY 
+HARIIDKA
 XOOSH FC INTER BOYS 
-R.R.P.B.O>
+R.R.P.B.O
 
-degmada waxay ku guuleysatay koobki degmooyinga ee ugu dambeeyay sandkii 2011
- waxaa kale oo ay ku guuleysatay tartan aqooneed kii ramadaanka ee 2013 oo ay ku tar tamayeen in kabadan 28 degmo oo ka kala yimid gobalada dalka oo dhan & ku caasimada.
-suuqyada degmada> suuq boocle ,suuq yare,suuq ceel dheere ,suuq liif.
-iskoolada>Al anwaar EX:DHAME YAASIIN CARTAN,ISKOOL BAARBE,IKOOL KUWAYD,khadiIJA iskuul dharkenley  al muniir,Abuubaka Al sidiiq(iskuul Dabaqeyn)& iskuulo kale oo badan
-xaafadaha> MACMACAANKA,TABAKAAYO MADOOW ,KAAWO GODEEY CALI CUMAR,ABA GEDO,SUUQ YARE XOOSH, SALDHIGA GALBEED, DABAQAYN .
-masaajiyada:
-uun laaye, cusmaan bin cafaan, masjidka kuweyt, masjidka saldhiga galbeed, dabaqeyn, xaaji maxamed, sh cabdixafiid, rabi sali al-nuur, al- raxma ceeldheere, salaam, macalin nuur,Khaliilu Raxman,
-
-{{Gumud}}
-{{Degmooyinka Gobolka Banaadir}}
+Degmada Dharkeenley waxay ku fiicanyihiin ciyaaraha isboortiska gaar ahaan kubada Cagta waxaana ay ahaayeen guuleystayaashii 2011 iyo guuleytayaashii sanadkii ugu danbeeyay ee 2020 ee ku guuleystay tartanka degmooyinka G/Banaadir ayagoona ka qaaday degmada Waaberi.
