--- a/Dharkeenleey.mw
+++ b/Dharkeenleey.mw
@@ -48,9 +48,9 @@
 
 Degmada Dharkeenleey waxay ka mid tahay degmooyinka magaalada Muqdisho waxay xigtaa dhanka koonfur galbeed.
 
-Waxaa waqtiyadii dagaalada ay ka socdeen xamar ee itoobiyaanka ku soo qaxay degmada dad fara badan oo degnaa Magaalada inteeda kale.
-
 Dharkeenlay iyo wadajir markii hore waxay isla ahaayen hal degmo mar dambe ayaa labo degmo laga kala dhigay. halka xuduudeeda u ah labada degmo ayaa lagu tilmaamaa in ay tahay wadada xaaji maxamed ee Suuq yare.
+
+Degmada Dharkeenley waxaa waqtiyadii dagaalada ay ka socdeen xamar ee itoobiyaanka, ku soo qaxay degmada dad fara badan oo degnaa Magaalada inteeda kale.
 
 Degmada Waxay soo martay marxalado kala duwan waxaana lagu tilmaamaa meelaha istaraatiijiga ee ka yaala Xamar.
 
@@ -60,11 +60,11 @@ Xili danbe waxaa xukunkeeda soo maray; Maxkamadaha Islaamiga, Jabhadda Islaamiga
 
 > Xaafadaha Dharkeenleey
 
-xaafada Ceel dheere,Showriyaha, Dabaqeen,Aabagedo, Kuweyt, Suuq boocle,Quraca waanjeesha, Suuq liif, Xoosh, Buula qaran, Macmacaanka, iyo kuwo kale.
+Xaafada Ceel dheere,Showriyaha, Dabaqeen,Aabagedo, Kuweyt, Suuq boocle,Quraca waanjeesha, Suuq liif, Xoosh, Buula qaran, Macmacaanka, iyo kuwo kale.
 
-Masaajida ku yaala dharkenley 
+> Masaajida ku yaala dharkeenley 
 
-Masaajido badan ayaa ku yaala degmada sida misaajidka dabaqeyn, uunlaayo, masjidka Saldhiga Galbeed, Xaaji Maxamed, sh cabdixafiid, Rabi Sali al-nuur, Al- raxma Ceeldheere, Salaam, Macallin nuur,Khaliilu Raxman,
+Masaajido badan ayaa ku yaala degmada sida misaajidka dabaqeyn, uunlaayo, Masjidka Saldhiga Galbeed, Xaaji Maxamed, sh cabdixafiid, Rabi Sali al-nuur, Al- raxma Ceeldheere, Salaam, Macallin nuur,Khaliilu Raxman,
 
 > Suuqyada Caanka ee ku yaala dharkeenley
 
@@ -102,7 +102,7 @@ Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
 • Warshada hargaha 
 
 
-> Iskuulada Dawlawda ee ku yaala Degmada 
+> Iskuulada Dawladda ee ku yaala Degmada 
 
 • Dhame yaasiin Cartan 
 
@@ -112,7 +112,23 @@ Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
 
 > Iskuulada gaarka ah eeku yaala degmada 
 
-Al-Fariid, Abuubakar Al-sadiiq, Iqra, Khaddiijo, Al-Anwaar, Assafa, Al-Risala, Halgan.
+• Al-Fariid
+
+• Abuubakar 
+
+• Al-sadiiq 
+
+• Iqra 
+
+• Khaddiijo
+
+• Al-Anwaar
+
+• Assafa 
+
+• Al-Risala 
+
+• Halgan
 
 > Tartan Aqooneedka degmada dharkeenley
 
@@ -121,21 +137,36 @@ Degmada waxay ku guuleysatay tartan aqooneed kii ramadaanka ee 2013 oo ay ku tar
 
 > Ciyaaraha iyo Kooxaha ka jira dharkeenleey degmada waxaa ka jira kooxo badan oo kubada cagta sida kooxaha: 
 
-IFTIN
-AARGO
-USSY
-VIOLA
-AL RAASHID
-SUUQ YARE
-AL IIMAAN
-ZEENO
-AL-AHLI DHARKEENLEY
-JUGWAYN
-AL-TUNSA
-IFIS
-FC GODEEY 
-HARIIDKA
-XOOSH FC INTER BOYS 
-R.R.P.B.O
+• IFTIN
+
+• AARGO
+
+• USSY
+
+• VIOLA
+
+• AL RAASHID
+
+• SUUQ YARE
+
+• AL IIMAAN
+
+• ZEENO
+
+• AL-AHLI DHARKEENLEY
+
+• JUGWAYN
+
+• AL-TUNSA
+
+• IFIS
+
+• FC GODEEY 
+
+• HARIIDKA
+
+• XOOSH FC INTER BOYS 
+
+• R.R.P.B.O
 
 Degmada Dharkeenley waxay ku fiicanyihiin ciyaaraha isboortiska gaar ahaan kubada Cagta waxaana ay ahaayeen guuleystayaashii 2011 iyo guuleytayaashii sanadkii ugu danbeeyay ee 2020 ee ku guuleystay tartanka degmooyinka G/Banaadir ayagoona ka qaaday degmada Waaberi.
