--- a/Dharkeenleey.mw
+++ b/Dharkeenleey.mw
@@ -50,7 +50,7 @@ Degmada Dharkeenleey waxay ka mid tahay degmooyinka magaalada Muqdisho waxay xig
 
 Dharkeenlay iyo wadajir markii hore waxay isla ahaayen hal degmo mar dambe ayaa labo degmo laga kala dhigay. halka xuduudeeda u ah labada degmo ayaa lagu tilmaamaa in ay tahay wadada xaaji maxamed ee Suuq yare.
 
-Degmada Dharkeenley waxaa waqtiyadii dagaalada ay ka socdeen xamar ee itoobiyaanka, ku soo qaxay degmada dad fara badan oo degnaa Magaalada inteeda kale.
+Degmada Dharkeenley waxaa waqtiyadii dagaalada ay ka socdeen xamar ee itoobiyaanka, ku soo qaxay dad fara badan oo degnaa Magaalada inteeda kale.
 
 Degmada Waxay soo martay marxalado kala duwan waxaana lagu tilmaamaa meelaha istaraatiijiga ee ka yaala Xamar.
 
