--- a/Dharkeenleey.mw
+++ b/Dharkeenleey.mw
@@ -102,7 +102,7 @@ Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
 • Warshada hargaha 
 
 
-> Iskuulada Dawladda ee ku yaala Degmada 
+> Iskuulada Dawlada ee ku yaala Degmada 
 
 • Dhame yaasiin Cartan 
 
