--- a/Dharkeenleey.mw
+++ b/Dharkeenleey.mw
@@ -46,11 +46,11 @@
 
 
 
-Degmada Dharkeenleey waxay ka mid tahay degmooyinka magaalada Muqdisho waxay xigtaa dhanka koonfur galbeed.
+Degmada Dharkenley waxay ka mid tahay degmooyinka magaalada Muqdisho waxay xigtaa dhanka koonfur galbeed.
 
-Dharkeenlay iyo wadajir markii hore waxay isla ahaayen hal degmo mar dambe ayaa labo degmo laga kala dhigay. halka xuduudeeda u ah labada degmo ayaa lagu tilmaamaa in ay tahay wadada xaaji maxamed ee Suuq yare.
+Dharkenley iyo wadajir markii hore waxay isla ahaayen hal degmo mar dambe ayaa labo degmo laga kala dhigay. halka xuduudeeda u ah labada degmo ayaa lagu tilmaamaa in ay tahay wadada xaaji maxamed ee Suuq yare.
 
-Degmada Dharkeenley waxaa waqtiyadii dagaalada ay ka socdeen xamar ee itoobiyaanka, ku soo qaxay dad fara badan oo degnaa Magaalada inteeda kale.
+Degmada Dharkenley waxaa waqtiyadii dagaalada ay ka socdeen xamar ee itoobiyaanka, ku soo qaxay dad fara badan oo degnaa Magaalada inteeda kale.
 
 Degmada Waxay soo martay marxalado kala duwan waxaana lagu tilmaamaa meelaha istaraatiijiga ee ka yaala Xamar.
 
@@ -58,7 +58,7 @@ Waagii burburka waxaa maaamuli jiray hogaamiyo kooxeedyo kala duwan sida: Muuse 
 
 Xili danbe waxaa xukunkeeda soo maray; Maxkamadaha Islaamiga, Jabhadda Islaamiga. Haddana waxay degmada hoos tagtaa maamulka Gobolka Banaadir ee Soomaaliya.
 
-> Xaafadaha Dharkeenleey
+> Xaafadaha Dharkenley
 
 Xaafada Ceel dheere, Showriyaha, Dabaqeen, Aabagedo, Kuweyt, Suuq boocle, Quraca waanjeesha, Suuq liif, Xoosh, Buula qaran, Macmacaanka, iyo kuwo kale.
 
@@ -91,7 +91,7 @@ Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
 • Exkontrool 
 
 
-> Goobaha Caalamiga ee ku yaala Dharkeenley 
+> Goobaha Caalamiga ee ku yaala Dharkenley 
 
 • Jaamacadda Ummadda Soomaaliyeed (Gaheyr)
 
@@ -130,7 +130,7 @@ Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
 
 • Halgan
 
-> Tartan Aqooneedka degmada dharkeenley
+> Tartan Aqooneedka degmada dharkenley
 
 Degmada waxay ku guuleysatay tartan aqooneed kii ramadaanka ee 2013 oo ay ku tartamayeen in ka badan 28 degmo oo ka kala yimid gobalada dalka oo dhan. sidoo kalana tartankii ramadaan ee 2020 waxay gashay kaalinta labaad.
 
@@ -169,4 +169,4 @@ Degmada waxay ku guuleysatay tartan aqooneed kii ramadaanka ee 2013 oo ay ku tar
 
 • R.R.P.B.O
 
-Degmada Dharkeenley waxay ku fiicanyihiin ciyaaraha isboortiska gaar ahaan kubada Cagta waxaana ay ahaayeen guuleystayaashii 2011 iyo guuleytayaashii sanadkii ugu danbeeyay ee 2020 ee ku guuleystay tartanka degmooyinka G/Banaadir ayagoona ka qaaday degmada Waaberi.
+Degmada Dharkenley waxay ku fiicanyihiin ciyaaraha isboortiska gaar ahaan kubada Cagta waxaana ay ahaayeen guuleystayaashii 2011 iyo guuleytayaashii sanadkii ugu danbeeyay ee 2020 ee ku guuleystay tartanka degmooyinka G/Banaadir ayagoona ka qaaday degmada Waaberi.
