--- a/Dharkeenleey.mw
+++ b/Dharkeenleey.mw
@@ -1,5 +1,5 @@
 {{Infobox Degmo
-| name                = Dharkeenleey
+| name                = Dharkenley
 | official_name       =  طركينلي
 | native_name         = 
 | image_skyline       = 
