/* Dharkeenleey */ Fixed typo, Fixed grammar

--- a/Dharkeenleey.mw
+++ b/Dharkeenleey.mw
@@ -21,8 +21,8 @@
 | coordinates_footnotes = 
 | region              = [[Banaadir]] (BN)
 | province            = [[Dharkeenleey]] (Muqdisho)
-| xaafado             =  Ceel dheere,Showriyaha, Dabaqeen, Aabagedo, Kuweyt, Suuq boocle,Quraca waanjeesha, Suuq liif, Xoosh, Buula qaran, Kaxda, Macmacaanka, Suuq yaraha, salaama, Tawakal, tabakaayo madow, nuur aduunyo.
-| adjacentcomuni      = Dharkeenleey
+| xaafado             =  Ceel dheere, Showriyaha, Dabaqeen, Aabagedo, Kuweyt, Suuq boocle, Quraca waanjeesha, Suuq liif, Xoosh, Buula qaran, Kaxda, Macmacaanka, Suuq yaraha, salaama, Tawakal, tabakaayo madow, nuur aduunyo.
+| adjacentcomuni      = Dharkenley
 | mayor_party         = Gudoomiyeha Degmada Yaaqshiid
 | mayor               = 
 | area_footnotes      = 
