/* Dharkeenleey */ Fixed typo, Fixed grammar

--- a/Dharkeenleey.mw
+++ b/Dharkeenleey.mw
@@ -101,7 +101,14 @@ Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
  
 • Warshada hargaha 
 
+> Laamiyada Waaweyn ee Mara Dharkenley 
 
+• Jidka Jaale siyaad 
+
+• Wadada Dharkenley (dhanka xoosh) 
+
+• Wadada Afgooye (Dhanka JUS ama Gaheyr) 
+ 
 > Iskuulada Dawlada ee ku yaala Degmada 
 
 • Dhame yaasiin Cartan 
@@ -115,8 +122,6 @@ Suuq boocle, Suuq yare, Suuqa weyn iyo Suuq liif
 • Al-Fariid
 
 • Abuubakar 
-
-• Al-sadiiq 
 
 • Iqra 
 
