--- a/Xeebjire.mw
+++ b/Xeebjire.mw
@@ -106,18 +106,18 @@ Beesha Xeebjire waxay caan ku tahay nabada iyo horumarka. Tan iyo ilaa heshiisya
 
 ==Dadka Caanka==
 * [[Sheekh Muuse Jaamac Goodaad]], suldaan iyo siyaasi
-* Cabdi Hassan Buuni Raisal wasaare Ku xigeen ki hore e dawladii Somalia, 
-* General Mohamed Jibril taliyihii hore ee ciidanka Asluubta Somaliland 
-* Dr MohamedRashid Sheekh Hassan
-* Pro Mohamed Mixile Boqore
-* Ismaaciil Cabdilahi Suge "Sowtalcarab", rugcadaa iyo ganacsade
+* [[Cabdi Xasan Buuni]], Raisal wasaare Ku xigeen ki hore e dawladii Soomaaliya, 
+* General Maxamed Jibril taliyihii hore ee ciidanka Asluubta Somaliland 
+* Dr Maxamed Rashid Sheekh Xasan
+* Pro Maxamed Mixile Boqore
+* Ismaaciil Cabdilahi Suge (Sowtalcarab), rugcadaa iyo ganacsade
 * Ina Cileeye, Dara salam Super market
-* X. Abubakar Xuseen Miicaad "Shiinedheere", ganacsade iyo siyaasi
+* Abubakar Xuseen Miicaad (Shiinedheere), ganacsade iyo siyaasi
 * General Good taliye Ku xigeen ki hore ee ciidanka police ka Jabouti
 * Sheekh Abdirahman Barkhad Good
-* General Husein Jodhob
-* Mohamed Muuse Bahdoon Sangoor
-* Chief Caaqil Ahmed Cige Salsal 
+* General Xuseen Jodhob
+* Maxamed Muuse Bahdoon (Sangoor), siyaasi, gudoomiye hore gobolka Awdal, duq-magaalada Borame
+* Suldaan Axmed Cige Salsal 
 * Caaqil Feedhe Geele
 
 ==Qoraalo La Mid Ah==
