/* Qoraalo La Mid Ah */

--- a/Xeebjire.mw
+++ b/Xeebjire.mw
@@ -120,7 +120,7 @@ Beesha Xeebjire waxay caan ku tahay nabada iyo horumarka. Tan iyo ilaa heshiisya
 * Suldaan Axmed Cige Salsal 
 * Caaqil Feedhe Geele
 
-==Qoraalo La Mid Ah==
+==Qoraalo La Xidhiidha==
 * [[Habar Cafaan]]
 * [[Gadabuursi]]
 
