--- a/Xeebjire.mw
+++ b/Xeebjire.mw
@@ -108,17 +108,18 @@ Beesha Xeebjire waxay caan ku tahay nabada iyo horumarka. Tan iyo ilaa heshiisya
 * [[Sheekh Muuse Jaamac Goodaad]], suldaan iyo siyaasi
 * [[Cabdi Xasan Buuni]], Raisal wasaare Ku xigeen ki hore e dawladii Soomaaliya, 
 * General Maxamed Jibril taliyihii hore ee ciidanka Asluubta Somaliland 
-* Dr Maxamed Rashid Sheekh Xasan
-* Pro Maxamed Mixile Boqore
+* Dr Maxamed Rashid Sheekh Xasan, siyaasi iyo wasiir hore
+* Pro Maxamed Mixile Boqore, siyaasi iyo wasiir hore
 * Ismaaciil Cabdilahi Suge (Sowtalcarab), rugcadaa iyo ganacsade
-* Ina Cileeye, Dara salam Super market
+* Ina Cileeye, ganacsade Dara salam Super market
 * Abubakar Xuseen Miicaad (Shiinedheere), ganacsade iyo siyaasi
-* General Good taliye Ku xigeen ki hore ee ciidanka police ka Jabouti
-* Sheekh Abdirahman Barkhad Good
+* General Cumar Good, taliye Ku xigeen ki hore ee ciidanka police ka Jabouti
+* Sheekh Cabdiraxman Barkhad Good, caalim
 * General Xuseen Jodhob
 * Maxamed Muuse Bahdoon (Sangoor), siyaasi, gudoomiye hore gobolka Awdal, duq-magaalada Borame
 * Suldaan Axmed Cige Salsal 
 * Caaqil Feedhe Geele
+* Axmed Cismaan Timacade, siyaasi iyo gudoomiyaha hada gobolka [[Sanaag]]
 
 ==Qoraalo La Xidhiidha==
 * [[Habar Cafaan]]
