*Empty MediaWiki Message*

--- a/Jirjir.mw
+++ b/Jirjir.mw
@@ -23,7 +23,7 @@
 |coordinates_display    =
 |coordinates_region     =
 |subdivision_type       =Dalka
-|subdivision_name       ={{flag|Soomaaliya}}
+|subdivision_name       ={{flag|Somaliland}}
 |subdivision_type1      =[[Gobolada Soomaaliya|Gobolka]]
 |subdivision_name1      =[[Awdal]]
 |subdivision_type2      =Degmooyinka
@@ -48,8 +48,6 @@
 |utc_offset             =+3
 |timezone_DST           =  
 |utc_offset_DST         = 
-|latd=10|latm=01|lats=59|latNS=N
-|longd=43|longm=16|longs=59|longEW=E
 |elevation_footnotes    = 
 |elevation_m            = 
 |postal_code_type       = 
@@ -64,7 +62,9 @@
 '''Jirjir''' ([[carabi]]: جرجر) waa magaalo ku taala gobolka [[Awdal]] ee [[Soomaaliya|Waqooyiga Soomaaliya]] ee maanta loo yaqaano [[Somaliland]]. Magaaladani waxay dhacdaa 47 km waqooyi galbeed magaalo madaxda gobalka ee [[Boorama]], waxayna aad ugu dhowdahay xadka wadanka [[Itoobiya]], Magaaladan waxa deegaan ku ah beelwaynta Xeebjire. Magaalada Jirjir waxaa la aasaasay horaantii qarnigii labaatanaad in kastoo aanay korin magaaladu tan iyo wakhtiyadii ka dambeeyay dagaaladii sokeeye. 
 Magaalada Jirjir waxaa ku hareerwareegsan dhul daaqsiimeed soo jiita [[xoolo]] badan oo iskugu jira duurjoog iyo dabjoog. Waxayna magaaladu aad ugu caan tahay [[beer]]aha dalaga kala duwan laga beero sida garowga, qamadiga, galeyda, liinta, muuska iyo noocyo badan oo kala duwan.
 Intaas waxaa dheer, magaalada Jirjir waxay ka mid tahay deegaanada aadka u koraya ee maalgeshiga iyo koboca xoowliga ah ka socdo, taasi oo soo jiidatay shacab badan oo ku dhaqan deegaankaasi.
-
+==Qoraalo la xidhiidha==
+* [[Xeebjire]]
+* [[:Template:Degmooyinka Gobolka Awdal|Degmooyinka Gobolka Awdal]]
 ==Tixraac==
 {{Reflist}}
 {{Template:Degmooyinka Gobolka Awdal}}
