--- a/Thomas_Sankara.mw
+++ b/Thomas_Sankara.mw
@@ -1,3 +1,4 @@
+{{wargelin|Qoraalka bogan waa mid uqoran si qaab daran. Fadlan naga caawi hagajinta bogan.}}
 [[File:Thomas_Sankara_Portrait_(cropped).jpg|thumb]]
 '''Thomas Isidore Noël Sankara''' (21 Diseembar 1949 - 15 Oktoobar 1987) wuxuu ahaa olole u ololeeya arrimaha cadaaladda bulshada Burkinabé iyo Madaxweynaha [[Burkina Faso]] intii u dhaxeysay 1983 ilaa 1987. kacaanka oo mararka qaar loo yaqaan "Afrika ee [[Che Guvara]]".
 
