--- a/Michael_Faraday.mw
+++ b/Michael_Faraday.mw
@@ -1,2 +1,2 @@
 [[File:Michael Faraday statue AB.jpg|thumb|right|Michael Faraday]]
-'''Michael Faraday''', FRS (22 September 1791 – 25 August 1867).
+my grandpa eat my carrot
