*Empty MediaWiki Message*

--- a/İstanbul_Başakşehir.mw
+++ b/İstanbul_Başakşehir.mw
@@ -1,4 +1,4 @@
-{{Distinguish|İstanbul Büyükşehir Belediyesi S.K.}}
+{{wargelin|Qoraalka bogan waa mid uqoran si qaab daran ama ka samaysan luuqad qalaad. Fadlan naga caawi turjumaada.}}
 {{Infobox football club
 |clubname            = İstanbul Başakşehir
 |image               = İstanbul Başakşehir logo.svg
