--- a/Xeebjire.mw
+++ b/Xeebjire.mw
@@ -72,7 +72,7 @@ Beesha Xeebjire waxay caan ku tahay nabada iyo horumarka. Tan iyo ilaa heshiisya
    |2='''Suge
    |3='''Billeyaasha}}
    |2='''Samatar}}
- |label2='''Maxamuud
+ |label2='''MAXAMUUD
  |2={{clade |thickness=3
    |label1='''Aw Xasan
    |1={{clade |thickness=3
@@ -96,7 +96,7 @@ Beesha Xeebjire waxay caan ku tahay nabada iyo horumarka. Tan iyo ilaa heshiisya
    |4='''Summalle}}
 }}
 }}
- |label3='''Aw Nuux
+ |label3='''AW NUUX
  |3={{clade |thickness=3
    |1='''Allamagan
    |2='''Geeldoon
