Bog loo bedeley [[Saraar]]

--- a/Sarar.mw
+++ b/Sarar.mw
@@ -1,53 +1,1 @@
-
-
-'''
-Sarar, Sool  Somaliland'''
-
-{{Flag|Somaliland}}
-
-
-[[File:Somalia-Somaliland-Sool.png|thumb|right|]]
-
-Magaloka sool , somaliland barigka.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-==sido kale fiiri==
-
-*[[Somaliland]]
+#REDIRECT [[saraar]]
