*Empty MediaWiki Message*

--- a/Buuhoodle.mw
+++ b/Buuhoodle.mw
@@ -14,15 +14,15 @@
 |image_map              = 
 |mapsize                = 
 |map_caption            = 
-|pushpin_map            =Somaliland
+|pushpin_map            = Somaliland location map.png
 |pushpin_label_position =bottom
 |pushpin_mapsize        =
 |pushpin_map_caption    =Meesha ay kaga dhacdo Somaliland
 |coordinates_display    =inline,title
 |coordinates_region     =SO-TO
 |subdivision_type       =Dalka
-|subdivision_name       ={{flag|Somalia}}
-|subdivision_type1      =[[Gobolada Somalia|Gobol]]
+|subdivision_name       ={{flag|Somaliland}}
+|subdivision_type1      =[[Gobolada Somaliland|Gobol]]
 |subdivision_name1      =[[Cayn]]
 |subdivision_type2      =|[[Degmo]]
 |subdivision_name2      =[[Degmada Buuhoodle|Buuhoodle]]
@@ -60,7 +60,7 @@
 }}
 [[File:Sacmadeeqa ee u dhow ceelka Qoob-Fardood.jpg|thumb|[[Sacmadeeqa]] waa taallo ee u dhow ceelka Qoob Fardood ee xaafadda Buuhoodle.]]
 
-Buuhoodle (Somali: Buuhoodle, Carabi: بووهودل), waxay ahayd caasimadda koowaad ee Darwiish ee ku taalneed [[Dareemo Caddo]] (1896 - 1897). Caasimadda Daraawiish ee labaad wuxuu ku yaalay [[Qoob Fardood]] (1898 - 1899). Labo Degmo ayaa ku yaal Buuhoodle, waa [[Dareemo Caddo]] iyo [[Qoob Fardood]]. Caasimadda Darwiish ku xigeenka waxay ahayd [[Weylahed]] (sanadka 1900). Maanta waxaa loo yaqaan Bohotle, waa caasimadda gobolka Cayn ee [[Somaliland|Somalia]].
+Buuhoodle (Somali: Buuhoodle, Carabi: بووهودل), waxay ahayd caasimadda koowaad ee Darwiish ee ku taalneed [[Dareemo Caddo]] (1896 - 1897). Caasimadda Daraawiish ee labaad wuxuu ku yaalay [[Qoob Fardood]] (1898 - 1899). Labo Degmo ayaa ku yaal Buuhoodle, waa [[Dareemo Caddo]] iyo [[Qoob Fardood]]. Caasimadda Darwiish ku xigeenka waxay ahayd [[Weylahed]] (sanadka 1900). Maanta waxaa loo yaqaan Bohotle, waa caasimadda gobolka Cayn ee [[Somaliland|Somalialand]].
 
 Magaalada Buuhoodle, saddexaadkeed wuxuu ku yaala Ogadenia, ama kilinka shanaaad. Abaanduulkii guud ee Daraawiish, [[Ismaaciil Mire]] wuxuu ku dhashay Buuhoodle.
 
@@ -78,4 +78,4 @@ Buhoodle wuxuu ku yaallaa xudduudka u dhaxeeya Soomaalia iyo Itoobiya. Waxay u a
  
 
 
-[[category:soomaalia]]
+[[category:somaliland]]
