*Empty MediaWiki Message*

--- a/Lughaya.mw
+++ b/Lughaya.mw
@@ -22,8 +22,8 @@
 |coordinates_display    =inline,title
 |coordinates_region     =SO-AW
 |subdivision_type       =Dalka
-|subdivision_name       ={{flag|Soomaaliya}}
-|subdivision_type1      =[[Gobolada Soomaaliya|Gobolada]]
+|subdivision_name       ={{flag|Somaliland}}
+|subdivision_type1      =[[Gobolada Somaliland|Gobolada]]
 |subdivision_name1      =[[Awdal]]
 |subdivision_type2      =Degmooyinka
 |subdivision_name2      =Lughaya
