*Empty MediaWiki Message*

--- a/Cali_Gurey.mw
+++ b/Cali_Gurey.mw
@@ -1,6 +1,6 @@
 {{Infobox person
 | name        = Cali Maxamuud Samantar (Cali Gurey) </br> Ali Mohamud Samanter (Ali Gurey) <br> علي محمود السمنتر
-| image       = 
+| image       = [[File:Ali gurey.jpg|thumb|Ali gurey]]
 | imagesize   = 190px
 | caption     = 
 | birth_date  = 
